Fix breadcrumb alignment

--- a/templates/futurist/sources/scss/template/content.scss
+++ b/templates/futurist/sources/scss/template/content.scss
@@ -30,6 +30,8 @@ $breadcrumb-margin: 1.5em;
   padding: 0;
   display: flex;
   position: relative;
+  max-width: 80%;
+  width: 100%;
 
   &:after {
     content: " ";
@@ -44,23 +46,25 @@ $breadcrumb-margin: 1.5em;
   li {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin: 0 $breadcrumb-margin;
     position: relative;
     z-index: 2;
     padding: 0 1em;
     background: #fff;
+    width: 25%;
 
-    &:first-child {
-      padding-right: 35px;
-    }
+    &:first-child { margin-left: 0; }
+    &:last-child { margin-right: 0; }
 
     & > a {
       display: block;
       font-size: 0.60em;
       text-decoration: none;
       text-transform: uppercase;
+      max-width: 75px;
+      text-align: center;
 
       &:after {
         content: " ";
@@ -90,6 +94,7 @@ $breadcrumb-margin: 1.5em;
 .cfw-breadcrumb-container {
   display: flex;
   justify-content: center;
+  padding: 0 20px;
 }
 
 .cfw-module-title {
@@ -102,9 +107,14 @@ $breadcrumb-margin: 1.5em;
   margin-bottom: 16px;
 }
 
+#cfw-cart-details {
+  padding-right: 0;
+}
+
 #cfw-cart-details-collapse-wrap {
   background: #f8f8f8;
   padding: 1.5em;
+  box-sizing: border-box;
 
   & > .cfw-module-title {
     padding-bottom: 0.5em;
@@ -204,18 +214,9 @@ $breadcrumb-margin: 1.5em;
 }
 
 @media(max-width: 767px) {
+
   #cfw-breadcrumb {
-    max-width: 350px;
-
-    li {
-      margin: 0 6px;
-      text-align: center;
-      padding: 0 10px;
-
-      &:first-child {
-        padding-right: 20px;
-      }
-    }
+    max-width: 100%;
   }
 
   #cfw-cart-details-review-bar {
@@ -231,6 +232,21 @@ $breadcrumb-margin: 1.5em;
     .cfw-cart-row {
       .cfw-cart-item-subtotal {
         margin-right: 20px;
+      }
+    }
+  }
+}
+
+@media(max-width: 445px) {
+  #cfw-breadcrumb {
+    li {
+      padding: 0 5px;
+      margin: 0 5px;
+      font-size: 0.5em;
+
+      &:before {
+        width: 14px;
+        height: 14px;
       }
     }
   }
